--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, viewport-fit=cover">
   <title>Exemplos de elementos existentes na plataforma</title>
-  <link href="/fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
-  <link href="/fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
+  <link href="fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
+  <link href="fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel="stylesheet">
   <link href="./webpages/css/fontawesome.min.css?v=1594995812" rel="stylesheet">
   <link href="./webpages/css/design-v2.css?v=1604010985" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#405983">
+  <link rel="apple-touch-icon" sizes="76x76" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="mask-icon" href="./safari-pinned-tab.svg" color="#405983">
   <meta name="msapplication-TileColor" content="#405983">
   <meta name="theme-color" content="#405983">
 </head>
