resolvendo index.html

--- a/index.html
+++ b/index.html
@@ -39,20 +39,19 @@
                         <h1>
                           Titulo h1
                           <p class="code">
-                            <code> &lt;h1&gt;&lt;/h1&gt; </code>
+                            <code> &lt;h1&gt; Titulo h1&lt;/h1&gt; </code>
                           </p>
                         </h1>
                         <h2>
                           Titulo h2
                           <p class="code">
-                            <code> &lt;h2&gt;&lt;/h2&gt; </code>
+                            <code> &lt;h2&gt;  Titulo h2&lt;/h2&gt; </code>
                           </p>
                         </h2>
                         <h2 class="lobby-title">
                           Titulo h2 com classe .lobby-title
-                          Titulo h2
                           <p class="code">
-                            <code> &lt;h2 class="lobby-title"&gt;&lt;/h2&gt; </code>
+                            <code> &lt;h2 class="lobby-title"&gt; Titulo h2 com classe .lobby-title&lt;/h2&gt; </code>
                           </p>
                         </h2>
                         <h3> Titulo h3</h3>
